--- a/index.html
+++ b/index.html
@@ -66,48 +66,7 @@
     </nav>
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-content">
-                <div class="col">
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block" src="img/img1.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Cheesy Pizza</h5>
-                                    <p>Pizza with mostly cheese that we love</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block" src="img/img2.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Ordinary Pizza</h5>
-                                    <p>Old but gold, popular and no need to be too beautiful</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block" src="img/img3.jpg" alt="Third slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Full topping Pizza</h5>
-                                    <p>Flavor is various. Best seller</p>
-                                </div>
-                            </div>
-                            <ol class="carousel-indicators">
-                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                <li data-target="#myCarousel" data-slide-to="1"></li>
-                                <li data-target="#myCarousel" data-slide-to="2"></li>
-                            </ol>
-                            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
@@ -117,17 +76,18 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <button type="button" class="btn btn-warning btn-sm align-self-center bold" data-toggle="modal" data-target="#reserveform">Reserve Table</button>
-                <div id="reserveform" tabindex="-1" class="col-12 col-sm-3" role="dialog">
+                <div id="reserveform" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                         <!-- form reserver-->
                         <div class="modal-content">
-                            <div class="bg-light collapse" id="mymodal">
-                                <div class="col-12 col-sm-8">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <div class="modal-header" id="mymodal">
+                                <div class="col-12 ">
                                     <form>
                                         <div class="card-header bg-warning">
                                             <h3>Reserve a table</h3>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="modal-body">
                                             <div class="form-group row">
                                                 <label class="form-check-label col-sm-3">Num of guest</label>
                                                 <div class="form-check form-check-inline">
@@ -142,15 +102,33 @@
                                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
                                                     <label class="form-check-label" for="inlineRadio1">3</label>
                                                 </div>
-                                            </div>
-                                            <div class="form-group row">
-                                                <label class="form-check-label col-sm-3">date and time</label>
-                                                <div>
-                                                    <input type="text" name="" placeholder="date">
-                                                    <input type="text" name="" placeholder="date">
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                                    <label class="form-check-label" for="inlineRadio1">4</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                                    <label class="form-check-label" for="inlineRadio1">5</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                                    <label class="form-check-label" for="inlineRadio1">6</label>
                                                 </div>
                                             </div>
                                             <div class="form-group row">
+                                                <label class="form-check-label col-sm-2">Section</label>
+                                                <button type="button" class="btn btn-success btn-lg">Non-smoking</button>
+                                                <button type="button" class="btn btn-danger btn-lg">Smoking</button>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label class="form-check-label col-sm-3">Date and time</label>
+                                                <div>
+                                                    <input type="text" name="" placeholder="date">
+                                                    <input type="text" name="" placeholder="time">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <a class="btn btn-secondary btn-lg" data-dismiss="modal">Close</button>
                                                 <a class="btn btn-primary btn-lg">Reserve</a>
                                             </div>
                                         </div>
@@ -163,7 +141,62 @@
             </div>
         </div>
     </header>
-
+    <div class="row row-content">
+        <div class="col-12">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block" src="img/img1.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Cheesy Pizza</h5>
+                            <p>Pizza with mostly cheese that we love</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block" src="img/img2.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Ordinary Pizza</h5>
+                            <p>Old but gold, popular and no need to be too beautiful</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block" src="img/img3.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Full topping Pizza</h5>
+                            <p>Flavor is various. Best seller</p>
+                        </div>
+                    </div>
+                    <div class="row row-content">
+                        <!--
+                            <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>-->
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <span id="carousel-button-icon" class="fa fa-pause"></span>
+                        </button>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="media">
             <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Unthappizza">
@@ -247,11 +280,30 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
         $(document).one(function() {
             $('#reserveform').modal('show');
+        });
+        /*$(document).ready(function() {
+            $("#myCarousel").carousel({
+                interval: 2000
+            });
+            $("carousel-pause").click(function() {
+                $("#myCarousel").carousel('pause');
+            });
+            $("carousel-play").click(function() {
+                $("#myCarousel").carousel('cycle');
+            });
+        })*/
+        $("carouselButton").click(function() {
+            if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                $("myCarousel").carousel('pause');
+                $("#carouselButton").children("span").removeClass('fa-pause');
+                $("#carouselButton").children("span").addClass('fa-play');
+            } else if ($("#carouselButton").children("span").hasClass('fa-play')) {
+                $("myCarousel").carousel('cycle');
+                $("#carouselButton").children("span").removeClass('fa-play');
+                $("#carouselButton").children("span").addClass('fa-pause');
+            }
         });
     </script>
 </body>
